--- a/src/styles/components/_add-option.scss
+++ b/src/styles/components/_add-option.scss
@@ -8,8 +8,27 @@
 
 .add-option {
   display: flex;
+  flex-direction: column;
+  padding: $m-size;
 }
 
 .add-option__input {
+  background: $dark-blue;
+  border: none;
+  color: $off-white;
+  border-bottom: .3rem solid darken($dark-blue, 10%);
   flex-grow: 1;
+  // margin-right: $s-size;
+  margin: 0 0 $s-size 0;
+  padding: $s-size;
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .add-option {
+    flex-direction: row;
+  }
+
+  .add-option__input {
+    margin: 0 $s-size 0 0;
+  }
 }
